--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
 <div class="row justify-content-center"> <img src="./Repository/Images/Logo.jpg" width="400" height="400"> 
       </div>
     </div>
-    <div>Inspiriert von der Apple Vision Pro, haben wir eine eigene Form einer Brille entworfen, die unserer Meinung nach eine kompakte und bessere Version, mit mehr gezielten Gesundheitsfeatures, die für den alltäglichen Gebrauch verwendbar ist. Sie ist für einen gesundheitsbewussten Lebensstil gemacht und durch eine für die Brille entworfene App, werden alle wichtigen Werte und Informationen in die Gläser projiziert. Doch nicht wie die große Apple Vision Pro, reden wir von einer gewöhnlichen Brille, die man kaum von anderen Brillenmodellen unterscheiden kann.</div>
+    <div>Inspiriert von den Besten, haben wir eine eigene Form einer Brille entworfen, die unserer Meinung nach eine kompakte und bessere Version, mit mehr gezielten Gesundheitsfeatures, die für den alltäglichen Gebrauch verwendbar ist. Sie ist für einen gesundheitsbewussten Lebensstil gemacht und durch eine für die Brille entworfene App, werden alle wichtigen Werte und Informationen in die Gläser projiziert. Nur reden wir von einer gewöhnlichen Brille, die man kaum von anderen Brillenmodellen unterscheiden kann.</div>
     <div>&nbsp;</div>
 <div class="row justify-content-center">
       <div class="col-auto">
         <div class="col-auto">
           <p><br>
-            <a class="btn btn-primary btn-lg" href="" role="button">BUY NOW</a>          </p>
+            <a class="btn btn-primary btn-lg" href="" role="button">JETZT KAUFEN</a>          </p>
         </div>
       </div>
 </div>
@@ -97,7 +97,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-4 col-md-6 col-sm-6 mb-md-0 mb-2 offset-xl-0 col-xl-6">
-          <h2>Kontaktiere Uns</h2>
+          <h2>Kontaktiere uns</h2>
           <address>
           <strong>VisionOptix GmbH&nbsp;</strong><br>
 BSZ-Wirtschaft II<br>
