--- a/index.html
+++ b/index.html
@@ -41,7 +41,11 @@
 <div class="row justify-content-center"> <img src="./Repository/Images/Logo.jpg" width="400" height="400"> 
       </div>
     </div>
-    <div>Inspiriert von den Besten, haben wir eine eigene Form einer Brille entworfen, die unserer Meinung nach eine kompakte und bessere Version, mit mehr gezielten Gesundheitsfeatures, die für den alltäglichen Gebrauch verwendbar ist. Sie ist für einen gesundheitsbewussten Lebensstil gemacht und durch eine für die Brille entworfene App, werden alle wichtigen Werte und Informationen in die Gläser projiziert. Nur reden wir von einer gewöhnlichen Brille, die man kaum von anderen Brillenmodellen unterscheiden kann.</div>
+    <div>
+      <p class="text-center">Inspiriert von den Besten</p>
+      <p class="text-center">Wir haben eine eigene Form einer Brille entworfen, die unserer Meinung nach eine kompakte und bessere Version, mit mehr gezielten Gesundheitsfeatures, die für den alltäglichen Gebrauch verwendbar ist</p>
+      <p class="text-center">Sie ist an jeden Lebensstil angepasst und durch eine für die Brille entworfene App, werden alle wichtigen Werte und Informationen in die Gläser projiziert. Nur reden wir von einer gewöhnlichen Brille, die man kaum von anderen Brillenmodellen unterscheiden kann</p>
+    </div>
     <div>&nbsp;</div>
 <div class="row justify-content-center">
       <div class="col-auto">
@@ -86,7 +90,7 @@
     <div class="row">
           <div class="col-12">
             <div class="embed-responsive embed-responsive-16by9">
-              <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/lFqDM_YlXV8"></iframe>
+              <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/F6p7_20KKn4"></iframe>
             </div>
           </div>
         </div>
